# Proyecto-Panaderia-Buen-Trigo

./: Administrador.cpp  Administrador.h  CMakeLists.txt  Encargado_Inventario.cpp  Encargado_Inventario.h  Ingrediente.cpp  Ingrediente.h  Ingredientes.txt  Inventario.cpp  Inventario.h  Panadero.cpp  Panadero.h  Personal.cpp  Personal.h  README.md  Receta.cpp  Receta.h  Recetas.txt  STOCK.txt  Visual.cpp  Visual.h  main.cpp
